-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.9.4
-
Fix Version/s: None
-
Component/s: Quick: Widget
-
Labels:
-
Environment:Windows 10 x64, Qt 5.9.4 msvc2017 official release
Surface Pro 2017 touchscreen
Steps to reproduce:
Take the example quick/quickwidgets/quickwidget as base.
In rotatingsquare.qml, add import QtQuick.Controls 2.1 to the top, then the following inside the root Rectangle:
Button { text: "Button" width: root.width / 2 height: root.width / 3 onClicked: { console.log("Button is pressed") } }
Run program, click on the button with touchscreen and with mouse
Expected: "Button is pressed" will be printed on stdout for both
Actual: "Button is pressed" is printed only for mouse click, but not on touch click
You can also try a SwipeView. Swiping with touchscreen will fail to swipe pages.
This is a regression in 5.9.4. The same works on 5.9.3.
I suspect it could be a result of the fix to QTBUG-64241, but I may be completely wrong.