Make QQuickWidget accept touch events on recent Qt versions

This fixes some issues operating the touch docker and other QML parts
with touchscreen when using Qt LTS later than 5.9.3. See
https://bugreports.qt.io/browse/QTBUG-66718

Differential Revision: https://phabricator.kde.org/D12762

(cherry picked from commit b1d67ddc2d36f6da976db42e064f7d67b9fffbe8)